wip: namespaced RBAC: but kustomize and bundle is not adding operand namespace
Signed-off-by: chiragkyal <ckyal@redhat.com>

--- a/bundle/manifests/external-secrets-operator.clusterserviceversion.yaml
+++ b/bundle/manifests/external-secrets-operator.clusterserviceversion.yaml
@@ -205,7 +205,7 @@ metadata:
     categories: Security
     console.openshift.io/disable-operand-delete: "true"
     containerImage: openshift.io/external-secrets-operator:latest
-    createdAt: "2025-08-01T10:58:49Z"
+    createdAt: "2025-08-11T09:39:42Z"
     features.operators.openshift.io/cnf: "false"
     features.operators.openshift.io/cni: "false"
     features.operators.openshift.io/csi: "false"
@@ -377,17 +377,6 @@ spec:
           verbs:
           - create
         - apiGroups:
-          - admissionregistration.k8s.io
-          resources:
-          - validatingwebhookconfigurations
-          verbs:
-          - create
-          - get
-          - list
-          - patch
-          - update
-          - watch
-        - apiGroups:
           - apiextensions.k8s.io
           resources:
           - customresourcedefinitions
@@ -397,16 +386,6 @@ spec:
           - get
           - list
           - patch
-          - update
-          - watch
-        - apiGroups:
-          - apps
-          resources:
-          - deployments
-          verbs:
-          - create
-          - get
-          - list
           - update
           - watch
         - apiGroups:
@@ -667,6 +646,30 @@ spec:
                   type: RuntimeDefault
               serviceAccountName: external-secrets-operator-controller-manager
               terminationGracePeriodSeconds: 10
+      permissions:
+      - rules:
+        - apiGroups:
+          - admissionregistration.k8s.io
+          resources:
+          - validatingwebhookconfigurations
+          verbs:
+          - create
+          - get
+          - list
+          - patch
+          - update
+          - watch
+        - apiGroups:
+          - apps
+          resources:
+          - deployments
+          verbs:
+          - create
+          - get
+          - list
+          - update
+          - watch
+        serviceAccountName: external-secrets-operator-controller-manager
     strategy: deployment
   installModes:
   - supported: false
