ESO-101: Restructures and renames ExternalSecrets API to ExternalSecretsConfig

--- a/config/crd/bases/operator.openshift.io_externalsecretsmanagers.yaml
+++ b/config/crd/bases/operator.openshift.io_externalsecretsmanagers.yaml
@@ -4,17 +4,31 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.17.3
+  labels:
+    app.kubernetes.io/name: externalsecretsmanager
+    app.kubernetes.io/part-of: external-secrets-operator
   name: externalsecretsmanagers.operator.openshift.io
 spec:
   group: operator.openshift.io
   names:
+    categories:
+    - external-secrets-operator
+    - external-secrets
     kind: ExternalSecretsManager
     listKind: ExternalSecretsManagerList
     plural: externalsecretsmanagers
+    shortNames:
+    - esm
+    - externalsecretsmanager
+    - esmanager
     singular: externalsecretsmanager
   scope: Cluster
   versions:
-  - name: v1alpha1
+  - additionalPrinterColumns:
+    - jsonPath: .metadata.creationTimestamp
+      name: AGE
+      type: date
+    name: v1alpha1
     schema:
       openAPIV3Schema:
         description: |-
@@ -49,14 +63,14 @@ spec:
               features:
                 description: features is for enabling the optional operator features.
                 items:
-                  description: |-
-                    Feature is for enabling the optional features.
-                    Feature is for enabling the optional features.
+                  description: Feature is for enabling the optional features.
                   properties:
                     enabled:
-                      description: enabled determines if feature should be turned
-                        on.
-                      type: boolean
+                      description: enabled indicates whether the feature is active.
+                      enum:
+                      - "true"
+                      - "false"
+                      type: string
                     name:
                       description: name of the optional feature.
                       type: string
@@ -1002,13 +1016,14 @@ spec:
                   labels:
                     additionalProperties:
                       type: string
-                    description: labels to apply to all resources created for external-secrets
-                      deployment.
+                    description: labels to apply to all resources created by the operator.
+                    maxProperties: 20
+                    minProperties: 0
                     type: object
                     x-kubernetes-map-type: granular
                   logLevel:
                     default: 1
-                    description: logLevel supports value range as per [kubernetes
+                    description: logLevel supports value range as per [Kubernetes
                       logging guidelines](https://github.com/kubernetes/community/blob/master/contributors/devel/sig-instrumentation/logging.md#what-method-to-use).
                     format: int32
                     maximum: 5
@@ -1020,8 +1035,34 @@ spec:
                     description: |-
                       nodeSelector is for defining the scheduling criteria using node labels.
                       ref: https://kubernetes.io/docs/concepts/configuration/assign-pod-node/
+                    maxProperties: 10
+                    minProperties: 0
                     type: object
                     x-kubernetes-map-type: atomic
+                  proxy:
+                    description: |-
+                      proxy is for setting the proxy configurations which will be made available
+                      in operand containers managed by the operator as environment variables.
+                    properties:
+                      httpProxy:
+                        description: httpProxy is the URL of the proxy for HTTP requests.
+                        maxLength: 2048
+                        minLength: 0
+                        type: string
+                      httpsProxy:
+                        description: httpsProxy is the URL of the proxy for HTTPS
+                          requests.
+                        maxLength: 2048
+                        minLength: 0
+                        type: string
+                      noProxy:
+                        description: noProxy is a comma-separated list of hostnames
+                          and/or CIDRs and/or IPs for which the proxy should not be
+                          used.
+                        maxLength: 4096
+                        minLength: 0
+                        type: string
+                    type: object
                   resources:
                     description: |-
                       resources is for defining the resource requirements.
@@ -1124,6 +1165,8 @@ spec:
                             If the operator is Exists, the value should be empty, otherwise just a regular string.
                           type: string
                       type: object
+                    maxItems: 10
+                    minItems: 0
                     type: array
                     x-kubernetes-list-type: atomic
                 type: object
