--- a/config/manifests/bases/external-secrets-operator.clusterserviceversion.yaml
+++ b/config/manifests/bases/external-secrets-operator.clusterserviceversion.yaml
@@ -19,7 +19,7 @@ metadata:
     features.operators.openshift.io/token-auth-azure: "false"
     features.operators.openshift.io/token-auth-gcp: "false"
     olm.skipRange: <1.0.0
-    operator.openshift.io/uninstall-message: The external secrets operator for Red
+    operator.openshift.io/uninstall-message: The External Secrets Operator for Red
       Hat OpenShift will be removed from external-secrets-operator namespace. If your
       Operator configured any off-cluster resources, these will continue to run and
       require manual cleanup. All operands created by the operator will need to be
@@ -120,17 +120,17 @@ spec:
       name: externalsecretsmanagers.operator.openshift.io
       version: v1alpha1
     - description: |-
-        ExternalSecrets describes configuration and information about the managed external-secrets
-        deployment. The name must be `cluster` as ExternalSecrets is a singleton,
+        ExternalSecretsConfig describes configuration and information about the managed external-secrets
+        deployment. The name must be `cluster` as ExternalSecretsConfig is a singleton,
         allowing only one instance per cluster.
 
-        When an ExternalSecrets is created, a new deployment is created which manages the
+        When an ExternalSecretsConfig is created, a new deployment is created which manages the
         external-secrets and keeps it in the desired state.
-      displayName: ExternalSecrets
-      kind: ExternalSecrets
-      name: externalsecrets.operator.openshift.io
+      displayName: ExternalSecretsConfig
+      kind: ExternalSecretsConfig
+      name: externalsecretsconfigs.operator.openshift.io
       version: v1alpha1
-  description: external secrets operator for Red Hat OpenShift deploys and manages
+  description: External Secrets Operator for Red Hat OpenShift deploys and manages
     `external-secrets` application in OpenShift clusters. `external-secrets` provides
     an uniformed interface to fetch secrets stored in external providers like  AWS
     Secrets Manager, HashiCorp Vault, Google Secrets Manager, Azure Key Vault, IBM
