--- a/config/samples/operator_v1alpha1_externalsecrets.yaml
+++ b/config/samples/operator_v1alpha1_externalsecrets.yaml
@@ -1,5 +1,5 @@
 apiVersion: operator.openshift.io/v1alpha1
-kind: ExternalSecrets
+kind: ExternalSecretsConfig
 metadata:
   labels:
     app.kubernetes.io/name: external-secrets-operator
