--- a/config/crd/bases/operator.openshift.io_externalsecretsconfigs.yaml
+++ b/config/crd/bases/operator.openshift.io_externalsecretsconfigs.yaml
@@ -1,28 +1,48 @@
+---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.17.3
-  creationTimestamp: null
-  name: externalsecrets.operator.openshift.io
+  labels:
+    app.kubernetes.io/name: externalsecretsconfig
+    app.kubernetes.io/part-of: external-secrets-operator
+  name: externalsecretsconfigs.operator.openshift.io
 spec:
   group: operator.openshift.io
   names:
-    kind: ExternalSecrets
-    listKind: ExternalSecretsList
-    plural: externalsecrets
-    singular: externalsecrets
+    categories:
+    - external-secrets-operator
+    - external-secrets
+    kind: ExternalSecretsConfig
+    listKind: ExternalSecretsConfigList
+    plural: externalsecretsconfigs
+    shortNames:
+    - esc
+    - externalsecretsconfig
+    - esconfig
+    singular: externalsecretsconfig
   scope: Cluster
   versions:
-  - name: v1alpha1
+  - additionalPrinterColumns:
+    - jsonPath: .status.conditions[?(@.type=='Ready')].status
+      name: Ready
+      type: string
+    - jsonPath: .status.conditions[?(@.type=='Ready')].message
+      name: Message
+      type: string
+    - jsonPath: .metadata.creationTimestamp
+      name: AGE
+      type: date
+    name: v1alpha1
     schema:
       openAPIV3Schema:
         description: |-
-          ExternalSecrets describes configuration and information about the managed external-secrets
-          deployment. The name must be `cluster` as ExternalSecrets is a singleton,
+          ExternalSecretsConfig describes configuration and information about the managed external-secrets
+          deployment. The name must be `cluster` as ExternalSecretsConfig is a singleton,
           allowing only one instance per cluster.
 
-          When an ExternalSecrets is created, a new deployment is created which manages the
+          When an ExternalSecretsConfig is created, a new deployment is created which manages the
           external-secrets and keeps it in the desired state.
         properties:
           apiVersion:
@@ -44,36 +64,11 @@ spec:
             type: object
           spec:
             description: spec is the specification of the desired behavior of the
-              ExternalSecrets.
+              ExternalSecretsConfig.
             properties:
-              controllerConfig:
-                description: |-
-                  controllerConfig is for configuring the controller for setting up
-                  defaults to enable external-secrets.
-                properties:
-                  labels:
-                    additionalProperties:
-                      type: string
-                    description: labels to apply to all resources created for external-secrets
-                      deployment.
-                    type: object
-                    x-kubernetes-map-type: granular
-                  namespace:
-                    default: external-secrets
-                    description: namespace is for configuring the namespace to install
-                      the external-secret operand.
-                    type: string
-                    x-kubernetes-validations:
-                    - message: namespace is immutable once set
-                      rule: self == oldSelf
-                type: object
-                x-kubernetes-validations:
-                - message: namespace may only be configured during creation
-                  rule: '!has(oldSelf.namespace) && !has(self.namespace) || has(oldSelf.namespace)
-                    && has(self.namespace)'
-              externalSecretsConfig:
-                description: externalSecretsConfig is for configuring the external-secrets
-                  behavior.
+              appConfig:
+                description: appConfig is for specifying the configurations for the
+                  external-secrets operand.
                 properties:
                   affinity:
                     description: |-
@@ -1020,7 +1015,7 @@ spec:
                         type: string
                       secretRef:
                         description: |-
-                          SecretRef is the kubernetes secret containing the TLS key pair to be used for the bitwarden server.
+                          SecretRef is the Kubernetes secret containing the TLS key pair to be used for the bitwarden server.
                           The issuer in CertManagerConfig will be utilized to generate the required certificate if the secret
                           reference is not provided and CertManagerConfig is configured. The key names in secret for certificate
                           must be `tls.crt`, for private key must be `tls.key` and for CA certificate key name must be `ca.crt`.
@@ -1028,6 +1023,8 @@ spec:
                           name:
                             description: Name of the secret resource being referred
                               to.
+                            maxLength: 253
+                            minLength: 1
                             type: string
                         required:
                         - name
@@ -1064,7 +1061,7 @@ spec:
                         description: |-
                           enabled is for enabling the use of cert-manager for obtaining and renewing the
                           certificates used for webhook server, instead of built-in certificates.
-                          Use `true` or `false` to indicate the preference.
+                          Use `true` or `false` to indicate the preference. This field is immutable once set.
                         enum:
                         - "true"
                         - "false"
@@ -1074,18 +1071,24 @@ spec:
                           rule: self == oldSelf
                       issuerRef:
                         description: |-
-                          issuerRef contains details to the referenced object used for
-                          obtaining the certificates. It must exist in the external-secrets
-                          namespace if not using a cluster-scoped cert-manager issuer.
+                          issuerRef contains details of the referenced object used for obtaining certificates. When
+                          `issuerRef.Kind` is `Issuer`, it must exist in the `.spec.controllerConfig.namespace`.
+                          This field is immutable once set.
                         properties:
                           group:
                             description: Group of the resource being referred to.
+                            maxLength: 253
+                            minLength: 1
                             type: string
                           kind:
                             description: Kind of the resource being referred to.
+                            maxLength: 253
+                            minLength: 1
                             type: string
                           name:
                             description: Name of the resource being referred to.
+                            maxLength: 253
+                            minLength: 1
                             type: string
                         required:
                         - name
@@ -1093,17 +1096,24 @@ spec:
                         x-kubernetes-validations:
                         - message: issuerRef is immutable once set
                           rule: self == oldSelf
+                        - message: kind must be either 'Issuer' or 'ClusterIssuer'
+                          rule: self.kind.lowerAscii() == 'issuer' || self.kind.lowerAscii()
+                            == 'clusterissuer'
+                        - message: group must be 'cert-manager.io'
+                          rule: self.group.lowerAscii() == 'cert-manager.io'
                     required:
                     - enabled
-                    - issuerRef
                     type: object
                     x-kubernetes-validations:
-                    - message: certManagerConfig must have enabled set, to set addInjectorAnnotations
+                    - message: issuerRef must be provided when enabled is set to 'true'.
+                      rule: self.enabled != 'true' || has(self.issuerRef)
+                    - message: addInjectorAnnotations can only be set when enabled
+                        is set to 'true'.
                       rule: 'has(self.addInjectorAnnotations) && self.addInjectorAnnotations
                         != ''false'' ? self.enabled != ''false'' : true'
                   logLevel:
                     default: 1
-                    description: logLevel supports value range as per [kubernetes
+                    description: logLevel supports value range as per [Kubernetes
                       logging guidelines](https://github.com/kubernetes/community/blob/master/contributors/devel/sig-instrumentation/logging.md#what-method-to-use).
                     format: int32
                     maximum: 5
@@ -1115,13 +1125,41 @@ spec:
                     description: |-
                       nodeSelector is for defining the scheduling criteria using node labels.
                       ref: https://kubernetes.io/docs/concepts/configuration/assign-pod-node/
+                    maxProperties: 10
+                    minProperties: 0
                     type: object
                     x-kubernetes-map-type: atomic
                   operatingNamespace:
                     description: |-
-                      operatingNamespace is for restricting the external-secrets operations to provided namespace.
+                      operatingNamespace is for restricting the external-secrets operations to the provided namespace.
                       And when enabled `ClusterSecretStore` and `ClusterExternalSecret` are implicitly disabled.
+                    maxLength: 63
+                    minLength: 1
                     type: string
+                  proxy:
+                    description: |-
+                      proxy is for setting the proxy configurations which will be made available
+                      in operand containers managed by the operator as environment variables.
+                    properties:
+                      httpProxy:
+                        description: httpProxy is the URL of the proxy for HTTP requests.
+                        maxLength: 2048
+                        minLength: 0
+                        type: string
+                      httpsProxy:
+                        description: httpsProxy is the URL of the proxy for HTTPS
+                          requests.
+                        maxLength: 2048
+                        minLength: 0
+                        type: string
+                      noProxy:
+                        description: noProxy is a comma-separated list of hostnames
+                          and/or CIDRs and/or IPs for which the proxy should not be
+                          used.
+                        maxLength: 4096
+                        minLength: 0
+                        type: string
+                    type: object
                   resources:
                     description: |-
                       resources is for defining the resource requirements.
@@ -1224,6 +1262,8 @@ spec:
                             If the operator is Exists, the value should be empty, otherwise just a regular string.
                           type: string
                       type: object
+                    maxItems: 10
+                    minItems: 0
                     type: array
                     x-kubernetes-list-type: atomic
                   webhookConfig:
@@ -1238,10 +1278,44 @@ spec:
                         type: string
                     type: object
                 type: object
+              controllerConfig:
+                description: |-
+                  controllerConfig is for specifying the configurations for the controller to use while installing
+                  the `external-secrets` operand.
+                properties:
+                  labels:
+                    additionalProperties:
+                      type: string
+                    description: labels to apply to all resources created for the
+                      external-secrets operand deployment.
+                    maxProperties: 20
+                    minProperties: 0
+                    type: object
+                    x-kubernetes-map-type: granular
+                  namespace:
+                    default: external-secrets
+                    description: |-
+                      namespace is for configuring the namespace to install the external-secret operand.
+                      This field is immutable once set.
+                    maxLength: 63
+                    minLength: 1
+                    type: string
+                    x-kubernetes-validations:
+                    - message: namespace is immutable once set
+                      rule: self == oldSelf
+                type: object
+                x-kubernetes-validations:
+                - message: namespace can only be configured during creation
+                  rule: '!has(oldSelf.namespace) && !has(self.namespace) || has(oldSelf.namespace)
+                    && has(self.namespace)'
             type: object
           status:
-            description: status is the most recently observed status of the ExternalSecrets.
+            description: status is the most recently observed status of the ExternalSecretsConfig.
             properties:
+              bitwardenSDKServerImage:
+                description: BitwardenSDKServerImage is the name of the image and
+                  the tag used for deploying bitwarden-sdk-server.
+                type: string
               conditions:
                 description: conditions holds information of the current state of
                   deployment.
@@ -1310,15 +1384,9 @@ spec:
             type: object
         type: object
         x-kubernetes-validations:
-        - message: ExternalSecrets is a singleton, .metadata.name must be 'cluster'
+        - message: ExternalSecretsConfig is a singleton, .metadata.name must be 'cluster'
           rule: self.metadata.name == 'cluster'
     served: true
     storage: true
     subresources:
       status: {}
-status:
-  acceptedNames:
-    kind: ""
-    plural: ""
-  conditions: null
-  storedVersions: null
