--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -2,7 +2,7 @@
 # since it depends on service name and namespace that are out of this kustomize package.
 # It should be run by config/default
 resources:
-- bases/operator.openshift.io_externalsecrets.yaml
+- bases/operator.openshift.io_externalsecretsconfigs.yaml
 - bases/operator.openshift.io_externalsecretsmanagers.yaml
 - bases/customresourcedefinition_acraccesstokens.generators.external-secrets.io.yml
 - bases/customresourcedefinition_clusterexternalsecrets.external-secrets.io.yml
