Create operator trusted-ca-configmap through OLM
Signed-off-by: chiragkyal <ckyal@redhat.com>

--- a/bundle/manifests/external-secrets-operator.clusterserviceversion.yaml
+++ b/bundle/manifests/external-secrets-operator.clusterserviceversion.yaml
@@ -204,7 +204,7 @@ metadata:
     categories: Security
     console.openshift.io/disable-operand-delete: "true"
     containerImage: openshift.io/external-secrets-operator:latest
-    createdAt: "2025-09-18T08:36:16Z"
+    createdAt: "2025-09-24T19:21:58Z"
     features.operators.openshift.io/cnf: "false"
     features.operators.openshift.io/cni: "false"
     features.operators.openshift.io/csi: "false"
@@ -665,12 +665,23 @@ spec:
                   runAsNonRoot: true
                   seccompProfile:
                     type: RuntimeDefault
+                volumeMounts:
+                - mountPath: /etc/pki/tls/certs
+                  name: trusted-ca-bundle
+                  readOnly: true
               securityContext:
                 runAsNonRoot: true
                 seccompProfile:
                   type: RuntimeDefault
               serviceAccountName: external-secrets-operator-controller-manager
               terminationGracePeriodSeconds: 10
+              volumes:
+              - configMap:
+                  items:
+                  - key: ca-bundle.crt
+                    path: ca-bundle.crt
+                  name: external-secrets-operator-trusted-ca-bundle
+                name: trusted-ca-bundle
     strategy: deployment
   installModes:
   - supported: false
