Create operator trusted-ca-configmap through OLM
Enable proxy-aware feature in CSV

Signed-off-by: chiragkyal <ckyal@redhat.com>

--- a/bundle/manifests/external-secrets-operator.clusterserviceversion.yaml
+++ b/bundle/manifests/external-secrets-operator.clusterserviceversion.yaml
@@ -220,13 +220,13 @@ metadata:
     categories: Security
     console.openshift.io/disable-operand-delete: "true"
     containerImage: openshift.io/external-secrets-operator:latest
-    createdAt: "2025-10-07T03:20:14Z"
+    createdAt: "2025-10-07T09:42:32Z"
     features.operators.openshift.io/cnf: "false"
     features.operators.openshift.io/cni: "false"
     features.operators.openshift.io/csi: "false"
     features.operators.openshift.io/disconnected: "false"
     features.operators.openshift.io/fips-compliant: "true"
-    features.operators.openshift.io/proxy-aware: "false"
+    features.operators.openshift.io/proxy-aware: "true"
     features.operators.openshift.io/tls-profiles: "false"
     features.operators.openshift.io/token-auth-aws: "false"
     features.operators.openshift.io/token-auth-azure: "false"
@@ -763,6 +763,9 @@ spec:
                   seccompProfile:
                     type: RuntimeDefault
                 volumeMounts:
+                - mountPath: /etc/pki/tls/certs
+                  name: trusted-ca-bundle
+                  readOnly: true
                 - mountPath: /etc/metrics-certs
                   name: metrics-serving-cert
                   readOnly: true
@@ -773,6 +776,9 @@ spec:
               serviceAccountName: external-secrets-operator-controller-manager
               terminationGracePeriodSeconds: 10
               volumes:
+              - configMap:
+                  name: external-secrets-operator-trusted-ca-bundle
+                name: trusted-ca-bundle
               - name: metrics-serving-cert
                 secret:
                   secretName: metrics-serving-cert
